2004-08-18  Jakub Jelinek  <jakub@redhat.com>

	* config/tc-ia64.c (start_unwind_section): Add linkonce_empty
	argument, don't do anything if current section is not
	.gnu.linkonce.t.* and linkonce_empty is set.
	(generate_unwind_image, dot_endp): Adjust callers, call
	start_unwind_section (*, 1) if nothing will be put into the
	section.

2004-08-17  Nick Clifton  <nickc@redhat.com>

	* as.c (MD_DEBUG_FORMAT_SELECTOR): Provide default definition.
	(show_usage): Add -g.
	(std_longopts): Add --gen-debug.  Alpha sort the table.
	(parse_args): Print an error message if a switch is not handled.
	Handle the -g switch, calling md_debug_format_selector() if
	necessary.
	* NEWS: Mention new feature.
	* doc/as.texinfo: Document new switch.
	* doc/internals.texi: Document behaviour of md_parse_option.
	
	* config/tc-arm.c (md_parse_option): Do not issue an error message
	if the switch is not recognised.
	* config/tc-m68k.c (md_parse_option): Likewise.
	* config/tc-pdp11.c (md_parse_option): Likewise.
	* config/tc-v850.c (md_parse_option): Likewise.

	* as.h: Fix up formatting.
	* tc.h: Likewise.

2004-08-16  Nick Clifton  <nickc@redhat.com>

	* macro.c (macro_set_alternate): Use ISO C90 formatting.

	* configure.in: Sort architecture based tables alphabetically.
	* configure: Regenerate.

2004-08-16  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (tc_ppc_regname_to_dw2regnum <regnames>): Replace
	{ "cc", 68 }, with { "cr", 70 }.

2004-08-13 Jan Beulich <jbeulich@novell.com>
	   Nick Clifton <nickc@redhat.com>

	* as.c: Add and handle new --alternate command line option.
	* macro.c (macro_set_alternate): New.
	* macro.h (macro_set_alternate): Declare.
	* read.c: Add and handle new .altmacro and .noaltmacro directives.
	* doc/as.texinfo: Document new command line option and pseudo-ops
	as well as insert documentation originating from gasp about
	alternate macro syntax.
	* NEWS: Mention new command line option and pseudo-ops.
