@@ -1,3 +1,7 @@
+2004-08-18  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>
+	* config/tc-mips.c (append_insn): Handle delay slots in branch likely
+	correctly.
+
 2004-08-18  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/tc-ia64.c (start_unwind_section): Add linkonce_empty
